[gd_scene load_steps=5 format=3 uid="uid://b3xs5p2aghold"]

[ext_resource type="Script" path="res://Scripts/pause.gd" id="1_nxerj"]

[sub_resource type="FontVariation" id="FontVariation_kq4ym"]

[sub_resource type="GDScript" id="GDScript_ru4k8"]
script/source = "extends Button


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_2aqp6"]
script/source = "extends Button


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass


func _on_start_button_pressed() -> void:
	pass # Replace with function body.
"

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nxerj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.22, 0.22, 0.22, 0.784314)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.5
offset_top = -186.0
offset_right = 121.5
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_kq4ym")
theme_override_font_sizes/font_size = 100
text = "Resume"
script = SubResource("GDScript_ru4k8")

[node name="VSeparator" type="VSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="Restart entire game" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_kq4ym")
theme_override_font_sizes/font_size = 100
text = "Reset"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Quit"
script = SubResource("GDScript_2aqp6")

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart entire game" to="." method="_on_restart_entire_game_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
